2007-07-16  Sankar P  <psankar@novell.com>

	* em-composer-prefs.c: (em_composer_prefs_construct):
	* em-composer-prefs.h:
	* mail-config.glade:
	Provide support for keeping your signature on top
	while replying.

2007-07-11  Srinivasa Ragavan  <sragavan@novell.com>

	* em-format-html-display.c: (efhd_attachment_button): Take warning
	softly instead of a crash.

2007-07-09  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by: Veerapuram Varadhan <vvaradhan@novell.com>

	* em-composer-utils.c: (em_utils_send_receipt): Added some flags so that
	the receipts work fine even if the account configured is not the default one.

	Committing on behalf of	Bharath Acharya <abharath@novell.com>
											     
2007-07-09  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-view.c: (emfv_setup_view_instance)
	Abort if ETable specification file fails to load.

2007-06-22  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #307410

	* em-utils.[ch]: (em_utils_clear_get_password_canceled_accounts_flag):
	Added new function to clear previously set flag to default value.
	* mail-session.c: (get_password): Storing and using new flag within
	account's service structure.
	* mail-component.c: (impl_sendAndReceive):
	Always clear flag to default when user clicks UI component.

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #271864 from Hiroyuki Ikezoe

	* mail-component.c: (view_changed):

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Fix for bug #347782 from hggdh

	* em-format.c: (emf_multipart_encrypted),
	(emf_inlinepgp_encrypted):

2007-07-08  Johnny Jacob  <jjohnny@novell.com>

	* em-composer-utils.c : Added composer.presendcheck event. Fixes
	#334118.
	
2007-07-07  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #317281 from Michael P. Lepore 

	* filtertypes.xml: Add support to search/filter/vfolders on flag
	completion status
	* searchtypes.xml:
	* vfoldertypes.xml:

2007-07-07  Srinivasa Ragavan  <sragavan@novell.com>
