@@ -1,3 +1,8 @@
+2007-07-17  Sankar P  <psankar@novell.com>
+
+	* em-format-html.c: (efh_format_headers):
+	Decodes Face header and displays the image.
+
 2007-07-16  Sankar P  <psankar@novell.com>
 
 	* em-composer-prefs.c: (em_composer_prefs_construct):
